# de-sar-sample-data

./: .gitignore  01_product_info.ipynb  02_demonstration.ipynb  03_loading_with_stac.ipynb  05_transforming_data.ipynb  README.md  environment.yaml  pixi.toml  pyproject.toml  speckle_filters.py
.devcontainer/: Dockerfile  devcontainer.json
de_sar_demo/: loading.py  masking.py  speckle_filters.py
demo_html_pages/: 01_product_info.html  02_demonstration.html  03_loading_with_stac.html  03a_loading_with_stac.html  03b_loading_known_scenes_with_stac.html  04_loading_with_datacube.html  05_transforming_data.html  README.md
demo_html_pages/extended_examples/: dataloading_known_scenes.html
demo_html_pages/tutorial/: 01_product_info.html  02_demonstration.html  04_loading_with_datacube.html
demo_notebooks/: 01_product_info.ipynb  02_demonstration.ipynb  03_loading_with_stac.ipynb  04_loading_with_datacube.ipynb  05_post_processing.ipynb  05_transforming_data.ipynb  README.md
demo_notebooks/extended_examples/: 01_sar_optical_timeseries_visualisation.ipynb  README.md  collection_1_demo.ipynb  dataloading_known_scenes.ipynb
demo_notebooks/tutorial/: 01_product_info.ipynb  02_demonstration.ipynb  03_loading_with_stac.ipynb  04_loading_with_datacube.ipynb  README.md
demo_notebooks/tutorial_c0/: 01_product_info.ipynb
demo_notebooks/tutorial_c1/: 01_product_info.ipynb  02_demonstration.ipynb  03_loading_with_stac.ipynb  04_loading_with_datacube.ipynb  05_post_processing.ipynb
